syntax = "proto3";

package cosmos.distribution.module.v1;

import "cosmos/app/v1alpha1/module.proto";

// Module is the config object of the distribution module.
message Module {
  option (cosmos.app.v1alpha1.module) = {
    go_import: "github.com/cosmos/cosmos-sdk/x/distribution"
  };

  string fee_collector_name = 1;
}